--- a/src/components/MomentDigest/Detail/styles.module.css
+++ b/src/components/MomentDigest/Detail/styles.module.css
@@ -72,4 +72,8 @@
       }
     }
   }
+
+  .assets {
+    margin-top: var(--sp12);
+  }
 }
